# linux-hardware-profiler

./: .gitignore  CMakeLists.txt  README.MD  SAFETY_WARNING.md
.github/workflows/: ci.yml
include/: CpuInfo.h  MemoryLatency.h  StressTest.h
scripts/: plot_results.py
src/: CpuInfo.cpp  MemoryLatency.cpp  StressTest.cpp  main.cpp
